--- a/style.css
+++ b/style.css
@@ -3,3 +3,63 @@
 html {
   box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+  background-color: #45badd;
+}
+
+.container {
+  /* this is a good way to style a background */
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url('./robot.gif');
+  background-size: contain;
+  /* This means that the image will be fully visable on the screen */
+  background-position: left center;
+  /* left is the horizantal prop and center in vertical */
+  background-repeat: no-repeat;
+}
+
+button {
+  cursor: pointer;
+  outline: none;
+  width: 200px;
+  height: 50px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px;
+  color: white;
+  background: #ff3482;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 2px 2px 22px 10px rgba(0,0,0,0.2);
+}
+
+button:hover {
+  filter: brightness(95%);
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+button:disabled {
+  cursor: default;
+  filter: brightness(30%)
+}
+
+/* Media Query: Tablet or smaller */
+@media screen and (max-width: 1000px) {
+  .container {
+    background-position: center center;
+    background-size: cover;
+  }
+
+  button {
+    box-shadow: 5px 5px 30px 20px rgba(0,0,0,0.5);
+  }
+}
